@@ -16,6 +16,7 @@ license = "MIT"
 thiserror = "1.0"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"], optional = true }
+hex = "0.4.3"
 trust-dns-proto = { version = "0.21.2", default-features = false }
 
 [dev-dependencies]
